Fix missing menu collapse

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -28,7 +28,12 @@ a {
 .aris-nav li {
   text-align: center;
 }
-@media (max-width: 880px) {
+@media (max-width: 767px) {
+  .aris-nav li {
+    text-align: left !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 880px) {
   .nav-name {
     display: none !important;
   }
